# draw-aio-mcp

./: .coverage  .env.example  .eslintrc.js  .gitignore  CLAUDE.md  Dockerfile  LICENSE  LICENSE-COMMERCIAL  LICENSE-MIT  README.md  README_ja.md  coverage.xml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.json
mcp-server/: .dockerignore  .env.dev  .env.docker  .env.example  .env.prod  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.optimized  MCP_MIGRATION_SUMMARY.md  Makefile  README.md  check_mcp_compatibility.py  deploy.ps1  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-optimization-report-1755059797.json  docker-optimization-report-1755061399.json  future_compatibility_plan_20250813_104603.json  mcp_compatibility_check_20250813_104136.json  mcp_compatibility_check_20250813_104247.json  mcp_compatibility_check_20250813_104727.json  mcp_integration_test_report.json  prepare_future_compatibility.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_container_tests.ps1  run_container_tests.sh  run_mcp_client_integration_tests.py  run_unit_tests.py  setup.py  simple_test.py  test_api_key_validation.py  test_claude_code_integration.py  test_convert_to_png.py  test_error_handling.py  (+25 more)
mcp-server/benchmarks/: performance-results.md  run-benchmarks.py
mcp-server/config/: fluent-bit.conf  logging.dev.json  logging.prod.json
mcp-server/deploy/: TASK_19_COMPLETION_SUMMARY.md
mcp-server/docker/: IMPLEMENTATION.md  OPTIMIZATION.md  OPTIMIZATION_ANALYSIS.md  README.md  TASK_27_COMPLETION_SUMMARY.md  build-multiarch.ps1  build-multiarch.sh  build.ps1  build.sh  image-size-analysis.py  security-scan.ps1  security-scan.sh  test-dockerfile.py  validate-optimization.ps1  validate-optimization.py  validate-optimization.sh  validate.ps1
mcp-server/docker-hub/: README.md
mcp-server/docs/: API_DOCUMENTATION.md  API_KEY_VALIDATION.md  CLAUDE_CODE_INTEGRATION.md  DEPENDENCY_CHECKING.md  DEVELOPER_GUIDE.md  INSTALLATION_GUIDE.md  MCP_CLIENT_INTEGRATION_TESTING.md  MCP_SERVER_USAGE_GUIDE.md  PROTOCOL_VERSION_VALIDATION.md  README.md  STANDARD_MCP_PATTERNS.md  TASK_18_COMPLETION_SUMMARY.md  TASK_26_COMPLETION_SUMMARY.md
mcp-server/monitoring/: alert_rules.yml  prometheus.yml
mcp-server/reports/: docker-optimization-report-1755059797.json  docker-optimization-report-1755061399.json  (+5 more)
(+86 files in other folders)
